# Pilot-Ai

./: .env.example  .gitignore  AUTOMATED_SYSTEM_IMPLEMENTATION.md  QUICK_START.md  README.md  ai.py  index.html  package-lock.json  package.json  patch_ai.py  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
scripts/: test-gemini-keys.mjs
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/enigo_test/: Cargo.toml
src-tauri/enigo_test/src/: main.rs
src-tauri/src/: main.rs
src-tauri/src/automation/: action.rs  ai.rs  apps.rs  config.rs  desktop.rs  executor.rs  knowledge.rs  mod.rs  photoshop.rs  safety.rs  skills.rs  state.rs
src/types/: action.ts
