[package]
name = "pilot_ai"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["api-all"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["sync", "time"] }
once_cell = "1.19"
enigo = "0.1.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
